--- a/intro-questions/index.html
+++ b/intro-questions/index.html
@@ -4,15 +4,15 @@
         <title>Introductory Questions</title>
     </head>
     <body>
-        <h1>Imtroductory Questions/h1>
+        <h1>Imtroductory Questions</h1>
         <p>My name is Mia Harris and I'm a junior majoring in Communication Design.</p>
+        <p>I'm mostly taking this class because it is a requirement for the Communication Design BFA program. However, I also am excited to be able to learn how to code a website because I think it is a really important skill to have as a graphic designer.</p>
         <p>The only HTML/CSS/JS experience I have is from an introductory computer science class I took in the fall of 11th grade.</p>
-        <p>Do you have any experience with HTML/CSS/JS? If so, tell us a bit about it.</p>
         <p>I want to learn how to design and code the layout of a website!</p>
         <p>As a Communication Design major, I am used to designing on the screen. From this, I know that dimensions and scale are much different on the screen than on paper.</p>
         <p>I personally love the website <a href="http://studiomontazami.archi/a-propos-studio-montazami.html">Studio Montazami.</a> I think the layout and transitions in it are really cool and it's interesting to navigate.</p>
         <p>I think <a href="https://theanimalpad.org/">The Animal Pad</a>'s website communicates things effectively. The tabs make it easy to navigate the subtopics on the weboage and everything is easily accessible to the user.</p>
-        <p>I love the <a href="https://www.florence.co/work-entertainment">Florence</a> website and think it works well. The site is simple yet exciting to navigable, and it utilizes a grid format.</p>
+        <p>I love the <a href="https://www.florence.co/">Florence</a> website and think it works well. The site is simple yet exciting to navigable, and it utilizes a grid format.</p>
         <p>This is an html document. I made it myself.</p>
     </body>
 </html>
