--- a/publish/hello/index.html
+++ b/publish/hello/index.html
@@ -4,6 +4,8 @@
         <title>Hello World</title>
     </head>
     <body>
-        This is my hello world document. It is html.
+        <h1>Hello World</h1>
+        <p>This is my hello world document.</p>
+        <p>This is an html document. I made it myself.</p>
     </body>
 </html>
