--- a/markup the quotes/index.html
+++ b/markup the quotes/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ghostbusters (1984)</title>
+        <title>movie-quotes</title>
         <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
