--- a/lyrics-exercise-type/index.html
+++ b/lyrics-exercise-type/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8"><title> lyrics exercise </title>
+        <meta charset="UTF-8">
+        <title> lyrics exercise type</title>
         <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
         <link href="css/styles.css" rel="stylesheet">
